# piklema

./: BasicItem.qml  CMakeLists.txt  Element.qml  FooterItem.qml  HeaderItem.qml  LogItem.qml  Main.qml  README.md  custommodel.cpp  custommodel.h  logger.cpp  logger.h  main.cpp  msgpull.txt  qml.qrc
